--- a/Settings.ini
+++ b/Settings.ini
@@ -15,3 +15,10 @@ x1 66
 x2 83
 y1 20, 25, 30, 35, 40, 45, 50, 55
 y2 25, 30, 35, 40, 45, 50, 55, 60
+
+
+cargo:
+x1 0
+x2 10 20
+y1 0, 2, 4, 6, 8, 10, 12, 14
+y2 1, 3, 5, 7, 9, 11, 13, 15
